syntax = "proto3";

package core;

option go_package = "tenkhours/proto/pb/core";

message Character {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string profile_id = 4;
  string name = 5;
}

// Input Messages
message CharacterInput {
  optional string id = 1;
  string name = 2;
}
